Instead of rebuilding updated Crostini apps, just update the name

The name should be the only member of the app item that can change
as a result of the app being updated (i.e. changes to the .desktop
file), so that is the only thing we need to update on the app item.

This fixes the problem of app items moving or changing folder when
the app is updated.

I have tried this on hardware and it works as intended.

Bug: 861524
Change-Id: I20e413991609f861b0b371856e8fc96e4905978c
Reviewed-on: https://chromium-review.googlesource.com/1160067
Reviewed-by: Timothy Loh <timloh@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Renée Wright <rjwright@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581153}
Former-commit-id: 223968844367fef041f270c862d6c017c25b6579